# Highrize

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: fastapi_app.py  full_demo.py
highrize/: __init__.py  cache.py  cli.py  client.py  core.py  middleware.py  models.py  tokens.py
highrize/compressors/: __init__.py  audio.py  document.py  image.py  soft.py  text.py  video.py
tests/: simulate_all.py
